[intro section done]

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- MY STYLESHEET -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- FONT AWESOME -->
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css' integrity='sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==' crossorigin='anonymous'/>
+
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
+
   <title>Alice Caronna</title>
 </head>
 <body>
@@ -40,7 +49,7 @@
     </aside>
 
 
-      <img src="./wetransfer_image00001-jpeg_2022-10-07_1631/primo-piano.jpeg" alt="Alice Caronna" class="hero-photo">
+    <img src="./wetransfer_image00001-jpeg_2022-10-07_1631/primo-piano.jpeg" alt="Alice Caronna" class="hero-photo">
 
 
     <section class="bio">
@@ -52,9 +61,14 @@
         Mentre si muove come organizzatrice di eventi e collaboratrice attiva per l’etichetta discografica Sono Music Group, Alice sta producendo il suo primo album in compagnia di Renato D’Amico, produttore del disco d’esordio “Toccaterra” della cantautrice toscana Emma Nolde.</p>
     </section>
 
+    <h1 class="titolo">ALICE CARONNA</h1>
+
   </section>
 
 
+  <section class="photo-gallery">
+    
+  </section>
 
 
   
