--- a/index.html
+++ b/index.html
@@ -163,6 +163,17 @@
   </section>
 
 
+
+  <section class="articoli">
+    
+    <div class="icons-container">
+      <i class="fa-regular fa-keyboard"></i>
+      <i class="fa-regular fa-keyboard"></i>
+      <i class="fa-regular fa-keyboard"></i>
+      <i class="fa-regular fa-keyboard"></i>
+    </div>
+
+  </section>
   
 </main>
 
